--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>My Phaser 3 Game</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Phaser 3 Game</title>
+  </head>
 
-<body>
-	<div id="app"></div>
-	<script type="module" src="src/main.ts"></script>
-</body>
+  <body>
+    <div id="app"></div>
+    <div
+      id="nice"
+      class="test"
+      style="background-color:pink;"
+    ></div>
+    <script type="module" src="src/main.ts"></script>
+  </body>
 
 </html>
