--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Phaser 3 Game</title>
+    <base href=".">
     <!-- add css from css/style.css -->
     <link href="css/style.css" rel="stylesheet">
   </head>
