mock user avatar and cover

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
   </head>
 
   <body>
-    <div id="app"></div>
-    <div
-      id="nice"
-      class="test"
-      style="background-color:pink;"
-    ></div>
+    <div id="app">
+      <div class="user-avatar">
+        <img alt="User Avatar" src="https://i.pravatar.cc/300">
+      </div>
+    </div>
     <script type="module" src="src/main.ts"></script>
   </body>
 
