add open graph and enforce it

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Phaser 3 Game</title>
+    <meta content="achievibit profile platformer test" property="og:title">
+    <meta content="./public/screenshot.png" property="og:image">
+    <meta content="https://kibibit.io/phaser-seed" property="og:url">
+    <meta content="website" property="og:type">
+    <meta content="testing achievibit platformer in cover photo on profile feature" property="og:description">
+    <meta content="achievibit, phaser, platformer, test, kibibit" property="og:keywords">
+    <title>Profile Platformer Test</title>
     <base href=".">
-    <!-- add css from css/style.css -->
-    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
