add missing css inclusion

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta content="achievibit, phaser, platformer, test, kibibit" property="og:keywords">
     <title>Profile Platformer Test</title>
     <base href=".">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
