--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="achievibit profile platformer test" property="og:title">
-    <meta content="/public/screenshot.png" property="og:image">
+    <meta content="https://kibibit.io/phaser-seed/screenshot.png" property="og:image">
     <meta content="https://kibibit.io/phaser-seed" property="og:url">
     <meta content="website" property="og:type">
     <meta content="testing achievibit platformer in cover photo on profile feature" property="og:description">
