add page description as profile content

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         <img alt="User Avatar" src="https://i.pravatar.cc/300">
       </div>
     </div>
+    <div class="content">
+      <p>
+        This demo showcases the Achievibit profile cover image in action, brought to life using Phaser. Instead of a simple static image, the cover transforms into a fun, interactive platformer where users can explore their personalized "layer." The layer acts as a home base, reflecting the user’s faction and decorated with trophies and characters based on their achievements.
+      </p>
+      <p>
+        Navigate through your custom environment, uncover hidden surprises, and get a taste of how your accomplishments come to life in this dynamic cover experience. This demo offers a glimpse into how profile covers can be more than just visuals—they can be adventures!
+      </p>
+    </div>
     <script type="module" src="src/main.ts"></script>
   </body>
 
